--- a/duplicati.conf.example
+++ b/duplicati.conf.example
@@ -33,13 +33,16 @@ SERVER_PAS="Password1!"
 BACKUP_CONFIG="/opt/duplicati_helper/backup.conf.example"
 ## This is the path to the duplicatirc file
 DUPLICATIRC="/opt/duplicati_helper/duplicatirc"
+## Specifies if the script should automatically check and install updates from Github
+HELPER_AUTO_UPDATE="true"
 
 # Advanced duplicati settings
 ## These are command line arguments for duplicati, sorted by topic. 
 COMPRESSION_MODULE="--compression-module=\"7z\" --7z-compression-level=7"
 ENCRYPTION_MODULE="--encryption-module=\"aes\""
 BACKUP_MODULE="--number-of-retries=25 --keep-time=\"3M\" --dblock-size=\"200mb\" --snapshot-policy=\"on\""
-UPDATE_POLICY=InstallBefore
+## This sets duplicati's update policy
+DUPLICATI_UPDATE_POLICY=InstallBefore
 
 # Advanced helper settings
 ## This status file will hold the information about the status of previous backups. Use duplicatirc to display it at log in. 
