Slightly simplified backup config, existing configs need to be modified. See backup.conf.example for detailed changes

--- a/backup.conf.example
+++ b/backup.conf.example
@@ -1,4 +1,4 @@
-# This file configures the available backups. Paths, names and password are not allowed to contain whitespaces.
+# This file configures the available backups. Backup names, backup paths and passwords are not allowed to contain whitespaces. Excluding paths may contain whitespaces, but have to be enclosed with double quotes (").
 # Please choose a secure password for each backup, do not repeate passwords
 # Backup name   Backup path             Backup password                                     Excluding paths
-root            /                       Password1!                                          --exclude="/dev/" --exclude="/media/" --exclude="/proc/" --exclude="/run/" --exclude="/sys/" --exclude="/tmp/"
+root            /                       Password1!                                          "/dev/" "/media/" "/proc/" "/run/" "/sys/" "/tmp/"
